commiting to javascript files

--- a/position.html
+++ b/position.html
@@ -44,7 +44,18 @@
 
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat vel iure minus, saepe repudiandae quisquam temporibus odit architecto autem quaerat quo dolorem mollitia, reprehenderit hic tempora sapiente nesciunt? Dolorum, quos.</p>
 
-
+          <!--syntax of css
+              different selector
+               types of css
+               css box model
+               css combinator
+               position
+               colors, background image
+               Navbar
+               Media queries
+                         -->
+                         
+         <!--task : build the reume using html and css -->
 
     </body>
 </html>
