--- a/HTML/Hyperlinks.html
+++ b/HTML/Hyperlinks.html
@@ -7,7 +7,7 @@
          target= "_blank"> Whatsapp </a> 
 
         <a href= "https://www.Google.com/ " 
-        target= "_blank"> Google </a> 
+        target= "_top"> Google </a> 
 
         <a href= "https://www.Snapchat.com/ " 
         target= "_blank"> Snapchat </a> 
