--- a/Index.html
+++ b/Index.html
@@ -5,7 +5,7 @@
           Index
       </title>
   </head>
-  </body>
+  <body>
 
     <a href = "Images.html"> Images </a>
     <a href = "audio.html"> audio </a>
@@ -15,4 +15,5 @@
     <a href = "Forms.html"> Forms </a>
     <a href = "Specialsymbols.html"> Specialsymbols </a>
     <a href = "RegisterSymbols.html"> RegisterSymbols </a>
+  </body>
 </html>
